# io-http

./: .cliffignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  flake.nix  shell.nix
examples/: send.rs  std_http10.rs  tokio_http11_rustls.rs
src/: lib.rs  request.rs  response.rs
src/1.1/: mod.rs
src/1.1/coroutines/: chunked-transfer-coding.rs  follow-redirects.rs  mod.rs  read-chunks.rs  send.rs  well-known.rs
src/coroutines/: mod.rs  send.rs
src/rfc1945/: mod.rs  send.rs  version.rs
src/rfc6750/: bearer.rs  mod.rs
src/rfc7617/: basic.rs  mod.rs
src/rfc8615/: mod.rs  well_known.rs
src/rfc9110/: headers.rs  mod.rs  request.rs  response.rs  status.rs
src/rfc9112/: chunk.rs  mod.rs  send.rs  version.rs
tests/: rfc1945.rs  rfc9112.rs  stub.rs
