[package]
name = "io-http"
description = "Set of I/O-free coroutines to manage HTTP streams"
version = "0.0.1"
authors = ["soywod <clement.douin@posteo.net>"]
rust-version = "1.56"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["io-free", "coroutine", "runtime", "stream", "http"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-http/latest/io_http"
repository = "https://github.com/pimalaya/io-http"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
env_logger = "0.11"
io-stream = { version = "0.0.2", default-features = false, features = ["std"] }
native-tls = "0.2"
rustls = "0.23"
rustls-platform-verifier = "0.6"
url = "2.5"

[dependencies]
http = "1.3"
httparse = "1.10"
io-stream = { version = "0.0.2", default-features = false }
log = "0.4"
memchr = "2.7"
thiserror = "2"
