[package]
name = "io-http"
description = "I/O-free HTTP/1.X client library"
version = "0.0.3"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "no-std"]
keywords = ["io-free", "no-std", "coroutine", "socket", "http"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-http/latest/io_http"
repository = "https://github.com/pimalaya/io-http"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
env_logger = "0.11"
io-socket = { version = "0.0.1", features = ["std-stream", "tokio-stream"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-platform-verifier = "0.6"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-rustls = "0.26"
url = { version = "2.5", default-features = false }

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
httparse = { version = "1.10", default-features = false }
io-socket = { version = "0.0.1", default-features = false }
log = { version = "0.4", default-features = false }
memchr = { version = "2.7", default-features = false }
secrecy = { version = "0.10", default-features = false }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false }

[patch.crates-io]
io-socket.git = "https://github.com/pimalaya/io-socket"
